More array tests passing