@@ -9,7 +9,6 @@ import pt.up.fe.comp2025.analysis.AnalysisVisitor;
 import pt.up.fe.comp2025.ast.Kind;
 import pt.up.fe.comp2025.ast.TypeUtils;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 
@@ -25,17 +24,21 @@ public class ArrayPasses extends AnalysisVisitor {
         addVisit(Kind.ARRAY_EXPR, this::visitArrayExpr);
         addVisit(Kind.ASSIGN_STMT, this::visitArrayAssignment);
         addVisit(Kind.NEW_ARRAY_EXPR, this::visitNewArrayExpr);
+
         addVisit(Kind.METHOD_DECL, this::visitMethodDecl);
+
+        addVisit(Kind.ARRAY_ELEM_EXPR, this::visitArrayElementExpr);
+        addVisit(Kind.WHILE_STMT, this::visitWhileStmt);
+        addVisit(Kind.IF_STMT, this::visitIfStmt);
+        addVisit(Kind.VAR_REF_EXPR, this::visitVarRefExpr);
     }
 
 
-    // Check that all elements in an array expression are of the same type
     private Void visitMethodDecl(JmmNode method, SymbolTable table) {
         currentMethod = method.get("name");
         return null;
     }
 
-    // Check that all elements in an array expression are of the same type
     private Void visitArrayExpr(JmmNode node, SymbolTable table) {
         List<JmmNode> elements = node.getChildren();
 
@@ -43,14 +46,11 @@ public class ArrayPasses extends AnalysisVisitor {
             return null;
         }
 
-        // Get the type of the first element as a reference
-        Type firstElementType = TypeUtils.getExprType(elements.get(0));
+        Type firstElementType = TypeUtils.getExprType(elements.getFirst());
 
-        // Check if all elements have the same type
         for (int i = 1; i < elements.size(); i++) {
             Type currentType = TypeUtils.getExprType(elements.get(i));
 
-            // If types don't match, report an error
             if (!Objects.equals(firstElementType, currentType)) {
                 var message = "Array elements must have the same type. Found: " +
                         firstElementType.getName() + " and " + currentType.getName();
@@ -69,16 +69,13 @@ public class ArrayPasses extends AnalysisVisitor {
         return null;
     }
 
-    // Check that array assignments are type-compatible
     private Void visitArrayAssignment(JmmNode node, SymbolTable table) {
         List<JmmNode> children = node.getChildren();
 
-        // Check if this is an array assignment (target is variable and right side is array expression)
         if (children.size() == 2) {
             JmmNode leftSide = children.get(0);
             JmmNode rightSide = children.get(1);
 
-            // Check if right side is an array expression
             if (rightSide.getKind().equals(Kind.ARRAY_EXPR.toString())) {
                 Type leftType = TypeUtils.getExprType(leftSide);
 
@@ -92,7 +89,6 @@ public class ArrayPasses extends AnalysisVisitor {
                             null
                     ));
                 } else {
-                    // Check if array element types match the expected type
                     Type expectedElementType = new Type(leftType.getName(), false);
                     for (JmmNode element : rightSide.getChildren()) {
                         Type elementType = TypeUtils.getExprType(element);
@@ -117,7 +113,7 @@ public class ArrayPasses extends AnalysisVisitor {
     }
 
     private Void visitNewArrayExpr(JmmNode node, SymbolTable table) {
-        JmmNode sizeExpr = node.getChildren().get(0);
+        JmmNode sizeExpr = node.getChildren().getFirst();
         Type sizeType = TypeUtils.getExprType(sizeExpr);
 
         if (!sizeType.getName().equals("int") || sizeType.isArray()) {
@@ -131,6 +127,95 @@ public class ArrayPasses extends AnalysisVisitor {
             ));
         }
 
+        return null;
+    }
+
+    private Void visitArrayElementExpr(JmmNode node, SymbolTable table) {
+        List<JmmNode> children = node.getChildren();
+
+        if (children.size() == 2) {
+            JmmNode arrayExpr = children.get(0);
+            JmmNode indexExpr = children.get(1);
+
+            Type arrayType = TypeUtils.getExprType(arrayExpr);
+            if (!arrayType.isArray()) {
+                var message = "Cannot perform array access on non-array type: " + arrayType.getName();
+                addReport(Report.newError(
+                        Stage.SEMANTIC,
+                        arrayExpr.getLine(),
+                        arrayExpr.getColumn(),
+                        message,
+                        null
+                ));
+            }
+
+            Type indexType = TypeUtils.getExprType(indexExpr);
+            if (!Objects.equals(indexType.getName(), "int") || indexType.isArray()) {
+                var message = "Array index must be an integer expression";
+                addReport(Report.newError(
+                        Stage.SEMANTIC,
+                        indexExpr.getLine(),
+                        indexExpr.getColumn(),
+                        message,
+                        null
+                ));
+            }
+        }
+
+        return null;
+    }
+
+    private Void visitWhileStmt(JmmNode node, SymbolTable table) {
+        List<JmmNode> children = node.getChildren();
+
+        if (!children.isEmpty()) {
+            JmmNode conditionExpr = children.getFirst();
+            Type conditionType = TypeUtils.getExprType(conditionExpr);
+
+            if (conditionType.isArray() || !Objects.equals(conditionType.getName(), "boolean")) {
+                var message = "While condition must be a boolean expression, not " +
+                        conditionType.getName() + (conditionType.isArray() ? "[]" : "");
+                addReport(Report.newError(
+                        Stage.SEMANTIC,
+                        conditionExpr.getLine(),
+                        conditionExpr.getColumn(),
+                        message,
+                        null
+                ));
+            }
+        }
+
+        return null;
+    }
+
+    // Check that if condition is boolean, not an array
+    private Void visitIfStmt(JmmNode node, SymbolTable table) {
+        List<JmmNode> children = node.getChildren();
+
+        if (!children.isEmpty()) {
+            JmmNode conditionExpr = children.getFirst();
+            Type conditionType = TypeUtils.getExprType(conditionExpr);
+
+            if (conditionType.isArray() || !Objects.equals(conditionType.getName(), "boolean")) {
+                var message = "If condition must be a boolean expression, not " +
+                        conditionType.getName() + (conditionType.isArray() ? "[]" : "");
+                addReport(Report.newError(
+                        Stage.SEMANTIC,
+                        conditionExpr.getLine(),
+                        conditionExpr.getColumn(),
+                        message,
+                        null
+                ));
+            }
+        }
+
+        return null;
+    }
+
+    // Extra check for variable reference expressions
+    private Void visitVarRefExpr(JmmNode node, SymbolTable table) {
+        // This method can be used for additional checks specific to variable references
+        // that might be related to arrays
         return null;
     }
 
